<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoreActivity">


    <TextView
        android:id="@+id/leaderboardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo12leaderboard"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/ranking"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:textAllCaps="true"
        android:text="@string/ranking"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderboardLabel" />

<!--    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/playerName"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderboardLabel"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="78dp" />-->
    <!-- commenting out -->

    <TextView
        android:id="@+id/timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20sp"
        android:text="@string/timeTaken"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ranking"
        app:layout_constraintTop_toBottomOf="@id/leaderboardLabel" />

    <TextView
        android:id="@+id/rank1st"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/firstHighScore"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ranking" />

    <TextView
        android:id="@+id/rank2nd"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/secondHighScore"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank1st" />

    <TextView
        android:id="@+id/rank3rd"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/thirdHighScore"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank2nd" />

    <TextView
        android:id="@+id/rank4th"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/fourthHighScore"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank3rd" />

    <TextView
        android:id="@+id/rank5th"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/fifthHighScore"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rank4th" />

    <TextView
        android:id="@+id/highscore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@id/rank1st"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timing" />

    <TextView
        android:id="@+id/highscore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@id/rank2nd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscore1"
        />

    <TextView
        android:id="@+id/highscore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@id/rank3rd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscore2" />

    <TextView
        android:id="@+id/highscore4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@id/rank4th"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscore3" />

    <TextView
        android:id="@+id/highscore5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toRightOf="@id/rank5th"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscore4" />

    <Button
        android:id="@+id/soloMatch20ScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="165dp"
        android:text="Solo 10 LEADERBOARD"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- pushing -->

</androidx.constraintlayout.widget.ConstraintLayout>