<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiplayerActivity">

    <TextView
        android:id="@+id/tv_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="P1: 0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="P2: 0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/multibackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/back_buttontext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/multipauseBtn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/multitextInfo" />

    <TextView
        android:id="@+id/multitextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_start"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/multipauseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameRecyclerView" />

    <Button
        android:id="@+id/multipauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pause_buttontext"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/multipauseForeground"
        android:layout_width="417dp"
        android:layout_height="743dp"
        android:background="#BE000000"
        android:gravity="center"
        android:text="@string/paused_text"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>